fix to avoid deprecated constructor